--- a/example/src/main/res/layout/item_wallet.xml
+++ b/example/src/main/res/layout/item_wallet.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:clickable="true"
+    android:focusable="true"
     android:background="?attr/selectableItemBackground"
     android:padding="16dp">
     <android.support.v7.widget.AppCompatTextView
