--- a/example/src/main/res/layout/activity_splash.xml
+++ b/example/src/main/res/layout/activity_splash.xml
@@ -1,43 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    
+    android:padding="16dp">
+
     <android.support.constraint.Guideline
         android:id="@+id/glLoginAction"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.7"/>
-    
+        app:layout_constraintGuide_percent="0.7" />
+
     <android.support.v7.widget.AppCompatEditText
         android:id="@+id/inputPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:lines="1"
         android:hint="Input password"
         android:inputType="textPassword"
+        android:lines="1"
         android:padding="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/glLoginAction"/>
-    
+        app:layout_constraintBottom_toTopOf="@+id/glLoginAction" />
+
     <android.support.v7.widget.AppCompatButton
         android:id="@+id/btnLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/glLoginAction"
-        android:text="Login"/>
-    
-    <android.support.v7.widget.AppCompatImageView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:scaleType="centerCrop"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/inputPassword"
-        app:srcCompat="@drawable/splah"
-        />
+        android:layout_marginTop="10dp"
+        android:text="Login"
+        app:layout_constraintTop_toBottomOf="@+id/glLoginAction" />
 
 </android.support.constraint.ConstraintLayout>
