--- a/example/src/main/res/layout/activity_splash.xml
+++ b/example/src/main/res/layout/activity_splash.xml
@@ -4,6 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp">
+    
+    <android.support.v7.widget.AppCompatTextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textColor="@android:color/black"
+        android:textSize="40sp"
+        android:text="SPLASH"/>
 
     <android.support.constraint.Guideline
         android:id="@+id/glLoginAction"
