--- a/example/src/main/res/menu/top_menu.xml
+++ b/example/src/main/res/menu/top_menu.xml
@@ -4,6 +4,7 @@
 
     <item android:id="@+id/menuNewWallet"
         android:title="New wallet"
+        app:iconTint="@android:color/white"
         android:icon="@android:drawable/ic_menu_add"
         app:showAsAction="ifRoom"/>
     
