--- a/example/src/main/res/layout/activity_main.xml
+++ b/example/src/main/res/layout/activity_main.xml
@@ -28,6 +28,7 @@
             android:id="@+id/tabLayout"
             android:layout_width="match_parent"
             android:layout_height="@dimen/actionBarSize"
+            app:tabTextAppearance="@style/TabLayoutStyle"
             app:tabSelectedTextColor="@android:color/white"
             app:tabTextColor="@android:color/darker_gray" />
 
