--- a/example/src/main/res/layout/activity_splash.xml
+++ b/example/src/main/res/layout/activity_splash.xml
@@ -11,7 +11,7 @@
         android:gravity="center"
         android:textColor="@android:color/black"
         android:textSize="40sp"
-        android:text="SPLASH"/>
+        android:text="splash"/>
 
     <android.support.constraint.Guideline
         android:id="@+id/glLoginAction"
