--- a/example/src/main/res/layout/activity_main.xml
+++ b/example/src/main/res/layout/activity_main.xml
@@ -34,27 +34,20 @@
 
     </android.support.design.widget.AppBarLayout>
 
-
-    <!--<android.support.v7.widget.AppCompatButton-->
-    <!--android:id="@+id/barcode"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:visibility="gone"-->
-    <!--android:text="@string/btn_barcode" />-->
-
-    <!--<android.support.v7.widget.AppCompatButton-->
-    <!--android:id="@+id/nfc"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:visibility="gone"-->
-    <!--android:text="@string/btn_nfc" />-->
-    <!---->
-
     <android.support.v7.widget.RecyclerView
         android:id="@+id/walletList"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pagerTabLayout"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
