--- a/example/src/main/res/layout/fragment_my_wallet.xml
+++ b/example/src/main/res/layout/fragment_my_wallet.xml
@@ -5,6 +5,12 @@
     android:layout_height="match_parent">
 
     <android.support.v7.widget.AppCompatTextView
+        android:id="@+id/address"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:lines="1"
+        android:padding="4dp"/>
+    <android.support.v7.widget.AppCompatTextView
         android:id="@+id/amountUsd"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
