--- a/example/src/main/res/layout/item_wallet.xml
+++ b/example/src/main/res/layout/item_wallet.xml
@@ -1,26 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android" 
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+    android:background="?attr/selectableItemBackground"
     android:clickable="true"
     android:focusable="true"
-    android:background="?attr/selectableItemBackground"
+    android:orientation="vertical"
     android:padding="16dp">
+
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_toStartOf="@+id/walletMenu"
         android:lines="1"
         android:text="18sp"
         android:textColor="@android:color/black"
-        tools:text="Name"/>
-    
+        tools:text="Name" />
+
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/address"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/name"
+        android:layout_toStartOf="@+id/walletMenu"
         android:lines="1"
-        tools:text="Address"/>
-</LinearLayout>
+        tools:text="111" />
+
+    <android.support.v7.widget.AppCompatImageView
+        android:id="@+id/walletMenu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:padding="10dp"
+        android:src="@drawable/ic_menu"
+        android:tint="@android:color/black" />
+
+</RelativeLayout>
