--- a/example/src/main/res/layout/fragment_my_wallet.xml
+++ b/example/src/main/res/layout/fragment_my_wallet.xml
@@ -70,6 +70,7 @@
         app:layout_constraintRight_toLeftOf="@+id/changeRate" />
 
     <android.support.v7.widget.AppCompatButton
+        android:id="@+id/sendNANJCoin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
