--- a/example/src/main/res/layout/activity_wallets.xml
+++ b/example/src/main/res/layout/activity_wallets.xml
@@ -6,18 +6,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".WalletsActivity">
 
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/appBarLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <!--<android.support.design.widget.AppBarLayout-->
+        <!--android:id="@+id/appBarLayout"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content">-->
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/actionBarSize"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            app:theme="@style/ThemeOverlay.App.ActionBar" />
-    </android.support.design.widget.AppBarLayout>
+        <!--<android.support.v7.widget.Toolbar-->
+            <!--android:id="@+id/toolbar"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="@dimen/actionBarSize"-->
+            <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light"-->
+            <!--app:theme="@style/ThemeOverlay.App.ActionBar" />-->
+    <!--</android.support.design.widget.AppBarLayout>-->
 
     <android.support.constraint.Guideline
         android:id="@+id/glVerticalCenter"
@@ -34,7 +34,7 @@
         android:text="Create wallet"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="@+id/glVerticalCenter"
-        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <android.support.v7.widget.AppCompatButton
         android:id="@+id/btnImportWallet"
@@ -44,12 +44,13 @@
         android:text="Import wallet"
         app:layout_constraintLeft_toLeftOf="@+id/glVerticalCenter"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
+        app:layout_constraintTop_toTopOf="parent" />
     
     <fragment
         android:id="@+id/walletsFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="10dp"
         android:name="com.bc.example.WalletsFragment"
         app:layout_constraintTop_toBottomOf="@+id/btnImportWallet"
         app:layout_constraintLeft_toLeftOf="parent"
