--- a/example/src/main/res/layout/dialog_send_nanj_coin.xml
+++ b/example/src/main/res/layout/dialog_send_nanj_coin.xml
@@ -1,40 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="8dp">
 
     <TextView
         android:id="@+id/nfc"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
+        android:gravity="center"
         android:padding="4dp"
         android:text="NFC"
-        android:gravity="center"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent" />
 
     <TextView
         android:id="@+id/qrcode"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
+        android:gravity="center"
         android:padding="4dp"
         android:text="QR"
-        android:gravity="center"
-        app:layout_constraintRight_toLeftOf="@+id/nfc"/>
+        app:layout_constraintRight_toLeftOf="@+id/nfc" />
 
     <android.support.v7.widget.AppCompatEditText
         android:id="@+id/address"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/qrcode"
-        android:hint="Address"
         android:layout_width="0dp"
-        android:layout_height="48dp" />
+        android:layout_height="48dp"
+        android:hint="Address"
+        android:text="0x70329776934Dc953eb01200D6E8473dBe054f665"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/qrcode" />
+
     <android.support.v7.widget.AppCompatEditText
         android:id="@+id/amountEth"
-        app:layout_constraintTop_toBottomOf="@+id/address"
-        android:hint="amount Eth"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:hint="amount Eth"
+        app:layout_constraintTop_toBottomOf="@+id/address" />
 
 </android.support.constraint.ConstraintLayout>
