--- a/example/src/main/res/layout/fragment_my_wallet.xml
+++ b/example/src/main/res/layout/fragment_my_wallet.xml
@@ -9,8 +9,15 @@
         android:id="@+id/address"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:lines="1"
-        android:padding="4dp"/>
+        android:textSize="10sp"
+        android:paddingStart="10dp"
+        android:paddingLeft="10dp"
+        android:paddingTop="10dp"
+        android:paddingRight="10dp"
+        android:paddingEnd="10dp"
+        android:paddingBottom="30dp"
+        tools:text="2312312312312312312312312312"
+        />
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/amountUsd"
         android:layout_width="match_parent"
