--- a/example/src/main/res/layout/activity_send_nanj_coin.xml
+++ b/example/src/main/res/layout/activity_send_nanj_coin.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
@@ -11,7 +13,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintRight_toLeftOf="@+id/qr"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:text="0xcb88BA2D29F75db70f38fD92d8Da38e9a0aF0553"
+        tools:text="0xcb88BA2D29F75db70f38fD92d8Da38e9a0aF0553"
         android:hint="address"/>
 
     <android.support.v7.widget.AppCompatTextView
@@ -34,18 +36,28 @@
 
     <android.support.v7.widget.AppCompatEditText
         android:id="@+id/amount"
+        android:inputType="number"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@+id/address"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="amount"/>
 
+    <android.support.v7.widget.AppCompatTextView
+        android:id="@+id/status"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/amount"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        tools:text="status"/>
+
     <android.support.v7.widget.AppCompatButton
         android:id="@+id/send"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/amount"
+        app:layout_constraintTop_toBottomOf="@+id/status"
         android:text="SEND"/>
 
 </android.support.constraint.ConstraintLayout>
