--- a/example/src/main/res/layout/fragment_my_wallet.xml
+++ b/example/src/main/res/layout/fragment_my_wallet.xml
@@ -5,18 +5,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <android.support.v7.widget.AppCompatImageView
+        android:id="@+id/imAddressWallet"
+        android:layout_width="match_parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="10dp"
+        android:layout_height="120dp" />
+
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/address"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="10sp"
-        android:paddingStart="10dp"
-        android:paddingLeft="10dp"
-        android:paddingTop="10dp"
-        android:paddingRight="10dp"
-        android:paddingEnd="10dp"
-        android:paddingBottom="30dp"
-        tools:text="2312312312312312312312312312"
+        android:padding="10dp"
+        android:gravity="center"
+        tools:text="nope"
+        app:layout_constraintTop_toBottomOf="@+id/imAddressWallet"
         />
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/amountUsd"
@@ -24,9 +28,11 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:padding="30dp"
-        tools:text="$9,115.66"
+        tools:text="$9,115.66 &#xf3d1;"
         android:textColor="@android:color/black"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        app:fontFamily="@font/font_awesome"
+        app:layout_constraintTop_toBottomOf="@+id/address"/>
 
     <View
         android:layout_width="match_parent"
