--- a/example/src/main/res/layout/activity_splash.xml
+++ b/example/src/main/res/layout/activity_splash.xml
@@ -1,24 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp">
-    
+
     <android.support.v7.widget.AppCompatTextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="30dp"
         android:gravity="center"
+        android:text="MINAWORKS"
         android:textColor="@android:color/black"
         android:textSize="40sp"
-        android:text="splash"/>
+        app:layout_constraintBottom_toTopOf="@id/inputPassword" />
 
     <android.support.constraint.Guideline
         android:id="@+id/glLoginAction"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.7" />
+        app:layout_constraintGuide_percent="0.5" />
 
     <android.support.v7.widget.AppCompatEditText
         android:id="@+id/inputPassword"
@@ -27,9 +30,9 @@
         android:hint="Input password"
         android:inputType="textPassword"
         android:lines="1"
-        android:text="qwerty2018"
         android:padding="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/glLoginAction" />
+        app:layout_constraintBottom_toTopOf="@+id/glLoginAction"
+        tools:text="qwerty2018" />
 
     <android.support.v7.widget.AppCompatButton
         android:id="@+id/btnLogin"
@@ -38,5 +41,13 @@
         android:layout_marginTop="10dp"
         android:text="Login"
         app:layout_constraintTop_toBottomOf="@+id/glLoginAction" />
+
+    <android.support.v7.widget.AppCompatTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Development by Minaworks.vn"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
