--- a/example/src/main/res/layout/activity_send_nanj_coin.xml
+++ b/example/src/main/res/layout/activity_send_nanj_coin.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintRight_toLeftOf="@+id/qr"
         app:layout_constraintLeft_toLeftOf="parent"
-        tools:text="0xcb88BA2D29F75db70f38fD92d8Da38e9a0aF0553"
+        android:text="0x4c94d0b90e5ad08251ff522e24d05b6ea9ce2787"
         android:hint="address"/>
 
     <android.support.v7.widget.AppCompatTextView
@@ -42,6 +42,7 @@
         app:layout_constraintTop_toBottomOf="@+id/address"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="1233453545756867867"
         android:hint="amount"/>
 
     <android.support.v7.widget.AppCompatTextView
