--- a/example/src/main/res/layout/dialog_import_json.xml
+++ b/example/src/main/res/layout/dialog_import_json.xml
@@ -31,6 +31,7 @@
         android:padding="8dp"
         android:layout_margin="8dp"
         android:gravity="top"
+        android:text="d8816e6d65b327575cdfe58dbe3ed83ade7079dc4885ef51cf38e795a6d71020"
         android:background="@drawable/border_view"/>
 
 </LinearLayout>
