--- a/example/src/main/res/layout/activity_send_nanj_coin.xml
+++ b/example/src/main/res/layout/activity_send_nanj_coin.xml
@@ -45,10 +45,20 @@
         android:text="1"
         android:hint="amount"/>
 
+    <EditText
+        android:background="@drawable/border_view"
+        android:hint="Message"
+        android:gravity="top"
+        android:padding="2dp"
+        android:id="@+id/edMsg"
+        app:layout_constraintTop_toBottomOf="@+id/amount"
+        android:layout_width="match_parent"
+        android:layout_height="150dp" />
+
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/status"
         android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/amount"
+        app:layout_constraintTop_toBottomOf="@+id/edMsg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
