--- a/example/src/main/res/layout/item_transaction.xml
+++ b/example/src/main/res/layout/item_transaction.xml
@@ -19,6 +19,8 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
+            android:textSize="18sp"
+            android:textColor="@android:color/black"
             android:text="Transfer ESNJ" />
 
         <android.support.v7.widget.AppCompatTextView
