--- a/example/src/main/res/layout/activity_send_nanj_coin.xml
+++ b/example/src/main/res/layout/activity_send_nanj_coin.xml
@@ -37,7 +37,7 @@
 
     <android.support.v7.widget.AppCompatEditText
         android:id="@+id/amount"
-        android:inputType="number"
+        android:inputType="numberDecimal"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@+id/address"
         android:layout_width="match_parent"
