--- a/NANJ/src/main/res/layout/activity_wallets.xml
+++ b/NANJ/src/main/res/layout/activity_wallets.xml
@@ -51,7 +51,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="10dp"
-        android:name="com.bc.example.WalletsFragment"
+        android:name="com.nanjsdk.sample.WalletsFragment"
         app:layout_constraintTop_toBottomOf="@+id/btnImportWallet"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
